--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A node server.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Earth-Hominid/first-node-server/issues"
   },
-  "homepage": "https://github.com/Earth-Hominid/first-node-server#readme"
+  "homepage": "https://github.com/Earth-Hominid/first-node-server#readme",
+  "dependencies": {
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
